backup_OLD/manifests/k8s-test-app/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  template:
    spec:
      containers:
        - name: backend
          image: vanneback/test-app-backend:latest
          securityContext:
            runAsUser: 1000
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
